TrainingDaysController + Fix